--- a/views/admin/product.ejs
+++ b/views/admin/product.ejs
@@ -156,6 +156,7 @@
                                     <th>Image</th>
                                     <th>Name</th>
                                     <th>Price</th>
+                                    <th>Discount Price</th>
                                     <th>Stock</th>
                                     <th class="text-end">Action</th>
                                     <th></th>
@@ -173,6 +174,7 @@
                                       </td>
                                       <td><%= product.name %></td>
                                       <td>$<%= product.price %></td>
+                                      <td>$<%= product.discountPrice %></td> 
                                       <td><%= product.stock %></td>
 
                                       <td class="text-end">
