--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -188,9 +188,9 @@
                             <div class="col-md-4">
                                 <div class="dashboard-menu">
                                     <ul class="nav flex-column" role="tablist">
-                                        <!-- <li class="nav-item">
-                                            <a class="nav-link active" id="dashboard-tab" data-bs-toggle="tab" href="#dashboard" role="tab" aria-controls="dashboard" aria-selected="false"><i class="fi-rs-settings-sliders mr-10"></i>Dashboard</a>
-                                        </li> -->
+                                        <li class="nav-item">
+                                            <a class="nav-link" id="dashboard-tab" data-bs-toggle="tab" href="#dashboard" role="tab" aria-controls="dashboard" aria-selected="false"><i class="fi-rs-settings-sliders mr-10"></i>Dashboard</a>
+                                        </li>
                                         <li class="nav-item">
                                             <a class="nav-link active" id="account-detail-tab" data-bs-toggle="tab" href="#account-detail" role="tab" aria-controls="account-detail" aria-selected="true"><i class="fi-rs-user mr-10"></i>Account details</a>
                                         </li>
@@ -211,6 +211,34 @@
                             </div>
                             <div class="col-md-8">
                                 <div class="tab-content dashboard-content">
+                                  <div class="tab-pane fade" id="dashboard" role="tabpanel" aria-labelledby="dashboard-tab">
+                                    <div class="card">
+                                        <div class="card-header">
+                                            <h5 class="mb-0">Hello <%= user.name %>!</h5>
+                                        </div>
+                                        <div class="card-body">
+                                            <!-- <p>From your account dashboard, you can easily check &amp; view your <a href="#">recent orders</a>, manage your <a href="#">shipping and billing addresses</a> and <a href="#">edit your password and account details.</a></p> -->
+                                            <hr>
+                                            <h6>Your Details:</h6>
+                                            <p><strong>Username:</strong> <%= user.name %></p>
+                                            <p><strong>Referral Code:</strong> <%= user.referralCode %></p>
+                                            <hr>
+                                            <h6>Addresses:</h6>
+                                            <% user.address.forEach(function(addr) { %>
+                                                <p><strong>House Name:</strong> <%= addr.houseName %></p>
+                                                <p><strong>Street:</strong> <%= addr.street %></p>
+                                                <p><strong>City:</strong> <%= addr.city %></p>
+                                                <p><strong>State:</strong> <%= addr.state %></p>
+                                                <p><strong>Country:</strong> <%= addr.country %></p>
+                                                <p><strong>Postal Code:</strong> <%= addr.postalCode %></p>
+                                                <p><strong>Phone Number:</strong> <%= addr.phoneNumber %></p>
+                                                <hr>
+                                            <% }); %>
+                                        </div>
+                                    </div>
+                                </div>
+                                
+
                                   <div class="tab-pane fade" id="orders" role="tabpanel" aria-labelledby="orders-tab">
                                     <div class="card">
                                         <div class="card-header">
