--- a/views/users/signup.ejs
+++ b/views/users/signup.ejs
@@ -44,6 +44,10 @@
                 <input required type="password" name="password2" id="password2" placeholder="Confirm password" />
                 <span class="error"></span>
             </div>
+            <div class="form-group">
+              <input type="text" id="referralCode" name="referralCode" class="form-control" placeholder="Referral Code" />
+              <div id="referralCodeError" class="error-message"></div>
+          </div>
             <div class="login_footer form-group">
                 <div class="chek-form">
                     <div class="custome-checkbox"></div>
