--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -60,6 +60,11 @@
                     <a class="menu-link" href="/admin/order"><i class="icon material-icons md-shopping_bag"></i>
                         <span class="text">Orders</span>
                     </a>
+                    <li class="">
+                        <a class="menu-link" href="/admin/salesreport"> <i class="icon material-icons md-store"></i>
+                            <span class="text">SalesReport Management</span>
+                        </a>
+                    </li>
             </ul>
             <br>
             <br>
